--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.4",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.19.1",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
