--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.4",
     "bootstrap": "^5.2.3",
     "calendar": "^0.1.1",
+    "chart.js": "^4.3.0",
     "clock": "^1.0.2",
     "firebase": "^9.21.0",
     "i18next": "^22.4.14",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.7.4",
     "react-calendar": "^4.2.1",
     "react-calendars": "^1.0.7",
+    "react-chartjs-2": "^5.2.0",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
