--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "react-time-picker": "^6.0.4",
-    "reactstrap": "^9.1.9"
+    "reactstrap": "^9.1.9",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
