--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-select": "^5.7.2",
     "react-time-picker": "^6.0.4",
     "reactstrap": "^9.1.9",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
