--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@mui/x-date-pickers": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.4",
     "bootstrap": "^5.2.3",
     "calendar": "^0.1.1",
     "chart.js": "^4.3.0",
     "clock": "^1.0.2",
+    "dayjs": "^1.11.7",
     "firebase": "^9.21.0",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
