--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-calendar": "^4.2.1",
     "react-calendars": "^1.0.7",
     "react-chartjs-2": "^5.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
+    "react-images-uploading": "^3.1.7",
     "react-menu-list": "^7.2.2",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
