--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.21.0",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-calendar": "^4.2.1",
