--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "calendar": "^0.1.1",
     "chart.js": "^4.3.0",
     "clock": "^1.0.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "firebase": "^9.21.0",
     "i18next": "^22.4.14",
